fix spacing issues

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -470,9 +470,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: .5rem;
   margin: auto;
-  padding: 1rem 0.25rem 1rem 0.25rem;
+  /* padding: 1rem 0.25rem 1rem 0.25rem; */
+  padding: 1rem;
 }
 
 .hours-condition-cont,
@@ -499,7 +500,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 0.5rem;
+  gap: .5rem;
   margin: auto;
 }
 
@@ -544,9 +545,9 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: .5rem;
   flex-wrap: wrap;
-  padding: 0.25rem;
+  padding: 0.5rem;
 }
 
 /* ---> CURRENT WEATHER CONTENT ***********/
@@ -559,7 +560,7 @@ body {
   align-items: center;
   font-family: var(--font-sans);
   margin: auto;
-  padding: 1rem 0.25rem 1rem 0.25rem;
+  padding: 1rem;
 }
 
 #conditions-text,
@@ -584,6 +585,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: .5rem;
   margin: 0.25rem;
 }
 
@@ -596,7 +598,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.25rem;
+  /* margin: 0.25rem; */
   padding: 0.25rem;
 }
 
@@ -616,7 +618,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: .5rem;
 }
 
 #weather-cont2 {
@@ -625,7 +627,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 0.5rem;
+  gap: .5rem;
+  padding: 0.5rem;
 }
 
 .current-div,
